# openrcc

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-installers.yml
cmake/: deps.cmake  distro.cmake
cmake/patches/: grpc-apple-silicon-compat.cmake
docs/: README.md  api.md  architecture.md  configuration.md  getting-started.md  macos-build.md
packaging/: PKGBUILD  openrcc.spec
packaging/windows/: openrcc.wxs
proto/: rcc_control.proto
scripts/: install-deps.sh
src/common/: config.cpp  config.hpp  logging.cpp  logging.hpp
src/job_manager/: job_fsm.cpp  job_fsm.hpp
src/luau_runtime/: luau_sandbox.cpp  luau_sandbox.hpp
src/service/: main.cpp  rcc_service_impl.cpp  rcc_service_impl.hpp
src/soap/: main.cpp  soap_bridge.cpp  soap_bridge.hpp
src/tutorial/: tutorial_mode.cpp  tutorial_mode.hpp
systemd/: openrcc.service
test/: config_test.cpp  job_fsm_test.cpp  luau_sandbox_test.cpp  soap_bridge_test.cpp  soap_parser_fuzz.cpp
